# rest-cpp-playground

./: CMakeLists.txt  zera-vein-restConfig.cmake.in
.github/workflows/: triggerMetaUpdates.yml
data/: Vein.json
src/: CMakeLists.txt  OAIAnyType.cpp  OAIAnyType.h  httpserversetup.cpp  httpserversetup.h  subscriptionmanager.cpp  subscriptionmanager.h  veinentry.cpp  veinentry.h  veinentrysingleton.cpp  veinentrysingleton.h
src/app/: main.cpp
src/handlers/: OAIApiRouter.cpp  OAIApiRouter.h  OAIVeinApiHandler.cpp  OAIVeinApiHandler.h  OAIZenuxLogsApiHandler.cpp  OAIZenuxLogsApiHandler.h
src/requests/: OAIVeinApiRequest.cpp  OAIVeinApiRequest.h
systemd/: CMakeLists.txt  zera-vein-rest.socket
testlib/: CMakeLists.txt  httpcurlclient.cpp  httpcurlclient.h
tests/: CMakeLists.txt  test_json_conversions.cpp  test_json_conversions.h  test_restserver.cpp  test_restserver.h  test_storage.cpp  test_storage.h  test_subscription_manager.cpp  test_subscription_manager.h  test_veinentry.cpp  test_veinentry.h
tests/test-data/: test-data.qrc
tests/test-data/rpc-responses/: RPC_displaySessionsInfos.json  RPC_displaySessionsInfos_InvalidEntityId.json  RPC_displaySessionsInfos_InvalidRPCName.json  RPC_displaySessionsInfos_InvalidRPCParams.json
